birchwood-k8s/cluster-nodes/bw-server/templates/server-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: birchwood-server
  namespace: server
spec:
  hosts:
  - "server.k8s.birchwood.com"
  gateways:
  - shared/birchwood-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: birchwood-server.server.svc.cluster.local
        port:
          number: 80
